Fix quill editor overflowing content with too long word

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -163,3 +163,7 @@ td.mat-column-usageCount {
 .pswp__button--card-button {
     color: #fff;
 }
+
+.ng-scroll-content {
+    width: 100%;
+}
